--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,15 +18,8 @@
             </div>
 
             <section id="image">
-                <div id="imageContainer">
                     <img id="imageSRS" src="" />
-                </div>
-                <div id="imageContainer2">
-                    <img id="imageSRS2" src="" />
-                </div>
             </section>
-
-
 
             <section id="form">
                 <form class="dataForm">
@@ -44,18 +37,12 @@
 
             <section id=results>
                 <div id="analysis">
-                    <div id="details">Your trip details:</div>
+                    <div id="details">My trip to:</div>
                     <div><br></div>
                     <div id="countdown"></div><br>
-                    <div id="tripLong"></div><br>
                     <div id="forecast"></div>
-                    <img id="icon" src="" />
                     <div id="temp"></div>
                     <div id="description"></div><br><br>
-                    <div id="country"></div><br>
-                    <div id="capital"></div>
-                    <div id="language"></div>
-                    <div id="currency"></div><br>
                     <button id="printButton">Print your trip</button>
 
                 </div>
