--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,20 +1,19 @@
-        body {
+      body {
             display: flex;
             flex-direction: column;
             min-height: 100vh;
             margin: 0;
-            font-family: 'Merriweather', serif;
             color: #fff;
         }
         
         main {
             flex: 2;
             background-image: url("../media/travel.jpg");
-            background-size: contain;
+            background-size:auto;
         }
         
         .app {
-            background: linear-gradient(0deg, rgba(136, 203, 171, 1) 0%, rgba(0, 13, 60, 1) 100%);
+            background: linear-gradient(0deg, rgb(203, 136, 156) 0%, rgb(112, 30, 85) 100%);
             display: grid;
             width: fit-content;
             max-width: 800px;
@@ -26,8 +25,6 @@
             padding: 10px;
             border: 1px solid whitesmoke;
         }
-        
-        #form {}
         
         #analysis {
             border: 1px solid whitesmoke;
@@ -42,8 +39,7 @@
             align-content: space-around;
         }
         
-        #imageSRS,
-        #imageSRS2 {
+        #imageSRS {
             object-fit: contain;
             width: 100%;
         }
@@ -53,8 +49,7 @@
             grid-area: res;
         }
         
-        #details,
-        #country {
+        #details {
             font-size: 1.5em;
         }
         
@@ -64,4 +59,5 @@
                 margin: auto;
                 gap: 10px;
             }
-        }
+        } 
+ 
